--- a/eventossociales.html
+++ b/eventossociales.html
@@ -6,7 +6,7 @@
 <h1> Eventos sociales </h1>
 <body>
 	<nav id="sup">
-		<a id="etiquetaini" href="Plantilladelproyecto.html">🏠 Inicio </a>
+		<a id="etiquetaini" href="index.html">🏠 Inicio </a>
 		<a id="etiquetarec" href="recuerdos.html"> 📷 Recuerdos </a>
 </nav>		
 </body>
