--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Eventos escolares</title>
-	<link rel="stylesheet" href="Estilodelaplantilla.css"/>
+	<link rel="stylesheet" href="index.css"/>
 </head>
 <h1> Eventos Escolares </h1>
 <center>
