--- a/recuerdos.html
+++ b/recuerdos.html
@@ -6,7 +6,7 @@
 <h1> Recuerdos </h1>
 <body>
 	<nav id="sup">
-		<a id="etiquetaini" href="Plantilladelproyecto.html">🏠 Inicio </a>
+		<a id="etiquetaini" href="index.html">🏠 Inicio </a>
 		<a id="etiquetarec" href="eventossociales.html"> ⬅️ Atras </a>
 </nav>		
 </body>
